# grader_qlc

./: Dockerfile  Dockerfile.y2  README.md  setup.cfg  setup.py
aplus_followups/: README.md  followups.js  template.html
grader_qlc/: __init__.py  __main__.py  aplus_form.js  aplus_template.html  data_template.html  files.py  i18n.py  mg_qlc.py  qlc_wrap.py  simple-quiz-form.js
test/: sample_content.py  test_files.py  test_run.py
