[metadata]
name = grader_qlc
version = 1.0.2
author = Teemu Lehtinen
author_email = teemu.t.lehtinen@aalto.fi
description = Augments existing programming assessments with QLCs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teemulehtinen/grader_qlc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
python_requires = >=3.6
install_requires =
    pyyaml
packages = grader_qlc

[options.package_data]
grader_qlc =
    *.html
    *.js

[options.entry_points]
console_scripts =
    qlc_wrap = grader_qlc:wrap
